[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summoned-ai"
version = "0.2.0"
description = "Summoned AI Gateway SDK — OpenAI-compatible Python client with routing, caching, guardrails, and multi-provider support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Summoned Tech", email = "dev@summoned.tech" },
]
keywords = [
    "ai", "llm", "gateway", "openai", "anthropic", "gemini", "groq",
    "bedrock", "sdk", "proxy", "multi-provider", "caching", "guardrails",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/summoned-tech/summoned-ai-gateway"
Repository = "https://github.com/summoned-tech/summoned-sdk-python"
Issues = "https://github.com/summoned-tech/summoned-sdk-python/issues"
Changelog = "https://github.com/summoned-tech/summoned-ai-gateway/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]
